--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "name": "Starter",
-    "version": "1.0.6.0",
-    "author": "TidyCustoms <https://tidycustoms.net/>",
+    "name": "Chabok",
+    "version": "0.0.0.1",
+    "author": "Khodayifar",
     "menus": {
         "mainMenu": "Main menu"
     },
@@ -10,7 +10,7 @@
 		"renderRelatedPosts": true,
 		"renderSimilarPosts": false,
 		"renderPrevNextPosts": true,
-		"createContentStructure": false,		
+		"createContentStructure": false,
 		"includeFeaturedInPosts": true,
         "tagsIncludeFeaturedInPosts": true,
         "authorsIncludeFeaturedInPosts": true,
@@ -627,7 +627,7 @@
                 "value": "true"
             }]
         },
-		
+
 		{
             "name": "galleryItemGap",
             "label": "Item spacing",
@@ -788,7 +788,7 @@
             }]
         },
 
-		
+
         {
             "name": "formatDate",
             "label": "Date format",
@@ -865,7 +865,7 @@
 			"group": "Additional",
 			"size": "small"
          },
-		
+
 		{
 			"name": "faviconUpload",
 			"label": "Upload favicon file",
@@ -877,7 +877,7 @@
 		},
 		{
 			"name": "faviconExtension",
-			"label": "Favicon extension", 
+			"label": "Favicon extension",
 			"group": "Additional",
 			"value": "image/x-icon",
 			"type": "select",
@@ -891,7 +891,7 @@
 					"value": "image/png"
                 }]
         },
-	
+
         {
             "name": "separator",
             "type": "separator",
